[project]
name = "context-npc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alex Berkhout", email = "berkhoutalex@gmail.com"},
]
dependencies = [
    "pytest>=8.1.1",
    "ipython>=8.12.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "openai>=1.14.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
